# ZFS-Manager

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_err.txt  compose.yaml  docker-compose.yml  init.sql
.github/workflows/: docker-build.yml
rust-backend/: Cargo.toml  Dockerfile  entrypoint.sh
rust-backend/src/: executor.rs  main.rs  startup.rs  state.rs  worker.rs
rust-backend/src/routes/: auth.rs  datasets.rs  health.rs  layout.rs  metrics.rs  mod.rs  notifications.rs  pools.rs  properties.rs  stats.rs  volumes.rs
src/: error.rs  main.rs
src/routes/: clones.rs  datasets.rs  health.rs  mod.rs  properties.rs  snapshots.rs  volumes.rs
web/: Dockerfile  build_err.txt  build_err8.txt  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-bsp/: README.md  metadata.json  server.ts
web-bsp/src/: App.tsx  types.ts
web/src/: App.tsx  api.ts  index.css  types.ts
web/src/components/: ACLManager.tsx  Dashboard.tsx  DatasetList.tsx  Login.tsx  PageTransition.tsx  Pagination.tsx  Performance.tsx  PerformanceMonitor.tsx  PhysicalDisksTable.tsx  Settings.tsx  Sidebar.tsx  SnapshotManager.tsx  StatCard.tsx  StoragePools.tsx  SystemLogs.tsx  WidgetShell.tsx
web/src/context/: NotificationContext.tsx
web/src/hooks/: useBreakpoint.ts  useLayout.ts
web/src/pages/: Notifications.tsx
