[package]
name = "zfs-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zfs-manager"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
